manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dotnet-app-deployment
  namespace: ravi
  labels:
    app: dotnet-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dotnet-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  template:
    metadata:
      labels:
        app: dotnet-app
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: env
                    operator: In
                    values:
                      - prob
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - dotnet-app
              topologyKey: "kubernetes.io/hostname"
      containers:
        - name: dotnet-app
          image: manishthota25/mani:latest
          ports:
            - containerPort: 5000
          livenessProbe:
            httpGet:
              path: /_status/healthz
              port: 5000
            initialDelaySeconds: 8
            periodSeconds: 10
            failureThreshold: 3
            successThreshold: 1
          readinessProbe:
            httpGet:
              path: /readiness
              port: 5000
            initialDelaySeconds: 15
            periodSeconds: 5
