manifests/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dotnet-app
  namespace: ravi
spec:
  selector:
    app: dotnet-app
  type : LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9376
