manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: ravi0626ravi
spec:
    type: LoadBalancer
    ports:
    - port: 5000 
    selector:
        app: ravi0626ravi
